feat(sybase):  Support for custom JVM parameters when launching the cdc tool .